Mon Mar 20 09:46:19 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/full-test.sh misc/test-auto.sh:
	- merged with 0.65

Tue Mar 14 16:16:24 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/sybdb.h src/apps/freebcp.c src/dblib/bcp.c:
	- make freebcp not depend on dblib internals
	* misc/test-other.sh: small fix
	* src/odbc/odbc.c: backport fix for 64-bit machines

Sat Mar 11 20:28:14 EST 2006	JK Lowden <jklowden@schemamania.org>
	* doc/userguide.sgml updated project's line count. 

Sat Mar 11 19:10:55 EST 2006	JK Lowden <jklowden@schemamania.org>
	* doc/userguide.sgml small updates and minor corrections

Tue Jan 31 14:23:49 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/apps/freebcp.c src/dblib/bcp.c:
	- fix problem converting characters

Tue Jan 31 09:41:10 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/dblib/dblib.c: more checks

Sun Jan 29 22:56:26 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/dblib/bcp.c src/dblib/unittests/t0017.c:
	- backported fixes for bcp native format

Wed Jan 25 15:33:20 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/dblib/bcp.c: fix return test for fseeko

Mon Jan 23 13:57:50 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* configure.in: update version to 0.64RC1

Wed Jan 11 10:42:16 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/test-other.sh: add parameters

Tue Jan 10 15:00:18 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* NEWS: updated

Mon Jan 09 14:25:09 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* win32/setup.rc: two controls was overlapped

Mon Jan 09 11:15:56 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/odbc.c: set state correctly if not available

Sat Jan 07 12:24:57 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/tds/mem.c:
	- fix memory leak
	- remove warning

Fri Jan 06 11:24:22 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tds.h src/tds/mem.c src/tds/token.c: